# third_party_wayland-ivi-extension

./: BUILD.gn  OAT.xml  README.en.md  README.md  bundle.json
ivi-input-modules/ivi-input-controller/src/: ivi-input-controller.c
ivi-layermanagement-api/ilmClient/src/: ilm_client_wayland_platform.c
ivi-layermanagement-api/ilmControl/src/: ilm_control_wayland_platform.c
weston-ivi-shell/src/: ivi-controller.c
